set max-height to remedy some of the stretching issue.

--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -24,7 +24,7 @@ header {
 }
 
 .ehr-logo {
-  height: 15vh;
+  max-height: 15vh;
   max-width: 12.5vw;
   grid-column: 1;
   grid-row: 1 / 3;
